effects: Fix nullptr dereference in EffectsWindowImpl::shape()

An Xwayland window may have null surface item if it has no wl_surface
associated with it yet.

BUG: 437138